--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ colorama==0.4.6
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
 gspread==5.10.0
+numpy==1.25.2
 oauthlib==3.2.2
+pandas==2.1.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pyfiglet==0.8.post1
+pytz==2023.3.post1
 requests-oauthlib==1.3.1
 rsa==4.9
+tzdata==2023.3
 urllib3==1.26.16
